# s3_bucket_file_upload

./: pyproject.toml
s3_bucket_file_upload/: Dostoyevsky.csv  Hobbes.csv  Marquez.csv  automatic_s3_uploader.py  get_data_api.py  secrets.py
tests/: test_s3_bucket_file_upload.py
