[tool.poetry]
name = "s3_bucket_file_upload"
version = "0.1.0"
description = ""
authors = ["Jacob Lappin Sadiq <jlappinsadiq@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.20.54"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
